<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="keywords_unica_settings">UN1CA Settings</string>
    <string name="menu_key_unica_top_settings">top_level_unica</string>
    <string name="unica_allow_downgrade_title">Allow application downgrade</string>
    <string name="unica_allow_sdkbypass_title">Disable low target SDK block</string>
    <string name="unica_asks_title">Disable ASKS</string>
    <string name="unica_boot_sound_title">Play boot sound effect</string>
    <string name="unica_device_name_title">Device name</string>
    <string name="unica_dialog_reboot_msg">To apply the changes, a restart is required.</string>
    <string name="unica_dialog_reboot_negative">Not now</string>
    <string name="unica_dialog_reboot_positive">Restart</string>
    <string name="unica_dialog_reboot_title">Restart required</string>
    <string name="unica_extra_settings_title">Extra settings</string>
    <string name="unica_games_spoof_title">Unlock higher FPS in games</string>
    <string name="unica_gphotos_title">Unlimited storage on Google Photos</string>
    <string name="unica_hma_summary">Prevent apps from detecting other installed apps.</string>
    <string name="unica_hma_title">Hide installed apps</string>
    <string name="unica_hide_dev_title">Hide developer status</string>
    <string name="unica_keybox_clear_title">Delete keybox data</string>
    <string name="unica_keybox_load_title">Import keybox XML file</string>
    <string name="unica_keybox_status_checking">Checking validity…</string>
    <string name="unica_keybox_status_loaded">Keybox loaded</string>
    <string name="unica_keybox_status_no_data">No keybox data</string>
    <string name="unica_keybox_status_revoked">Revoked keybox</string>
    <string name="unica_keybox_status_valid">Valid keybox</string>
    <string name="unica_keybox_title">Spoof hardware attestation</string>
    <string name="unica_keybox_toast_cleared">Keybox data cleared.</string>
    <string name="unica_keybox_toast_error">An error occurred.</string>
    <string name="unica_keybox_toast_error_xml">Could not parse XML file.</string>
    <string name="unica_keybox_toast_loaded">Keybox file loaded.</string>
    <string name="unica_keybox_toast_not_gak">Keybox is not signed by Google.</string>
    <string name="unica_keybox_toast_not_valid">Keybox file not valid.</string>
    <string name="unica_launcher_anim_type_title">Launcher animation type</string>
    <string name="unica_max_refresh_rate_title">Force peak refresh rate</string>
    <string name="unica_menu_item_reboot_download_title">Reboot to Download</string>
    <string name="unica_menu_item_reboot_fastboot_title">Reboot to Fastboot</string>
    <string name="unica_menu_item_reboot_recovery_title">Reboot to Recovery</string>
    <string name="unica_menu_item_reboot_title">Reboot</string>
    <string name="unica_menu_reboot_title">Reboot options</string>
    <string name="unica_native_blur_title">Enable live blur effect</string>
    <string name="unica_pif_custom_title">Import custom PIF props from file</string>
    <string name="unica_pif_summary">Spoof your device to pass Google Play attestation.</string>
    <string name="unica_pif_title">Play Integrity Fix</string>
    <string name="unica_pif_toast_checking">Checking for updates…</string>
    <string name="unica_pif_toast_custom">Custom props loaded.</string>
    <string name="unica_pif_toast_error">An error occurred.</string>
    <string name="unica_pif_toast_error_custom">Invalid file.</string>
    <string name="unica_pif_toast_up_to_date">"You're running the latest version."</string>
    <string name="unica_pif_toast_updated">Update completed successfully.</string>
    <string name="unica_pif_update_title">Update Play Integrity Fix</string>
    <string name="unica_rom_version_title">ROM version</string>
    <string name="unica_secure_ss_title">Allow secure screenshot</string>
    <string name="unica_settings_title">UN1CA Settings</string>
    <string name="unica_ss_detection_title">Disable screen capture detection</string>
    <string name="unica_spoof_settings_title">Spoof settings</string>
    <string name="unica_ui_settings_title">UI settings</string>
    <string name="unica_updates_title">UN1CA Updates</string>
    <string name="unica_vulkan_summary">This is unstable and might cause issues!</string>
    <string name="unica_vulkan_title">Enable Vulkan renderer</string>
    <string name="unica_pm_title">Advanced power menu</string>
    <string name="unica_pm_summary">Adds additional options to power menu</string>
    <string name="unica_pm_options_title">Power menu options</string>
    <string name="unica_pm_options_summary">Select power menu options</string>
    <string name="unica_pm_no_confirm_title">Disable restart confirmation</string>
    <string name="unica_pm_no_confirm_summary">Disable restart confirmation</string>
    <string name="unica_pm_no_lockscreen_title">Disable power menu on lockscreen</string>
    <string name="unica_pm_no_lockscreen_summary">Disable display of power menu when device is secure locked</string>
    <string name="unica_pm_unlock_first_title">Unlock keyguard before actions</string>
    <string name="unica_pm_unlock_first_summary">Perform restart or power off actions after unlocking secure keyguard</string>
    <string name="unica_pm_opt_poweroff_title">Power off</string>
    <string name="unica_pm_opt_poweroff_summary">Enable Power off in power menu</string>
    <string name="unica_pm_opt_restart_title">Restart</string>
    <string name="unica_pm_opt_restart_summary">Enable Restart in power menu</string>
    <string name="unica_pm_opt_recovery_title">Recovery mode</string>
    <string name="unica_pm_opt_recovery_summary">Enable Restart to Recovery mode in power menu</string>
    <string name="unica_pm_opt_download_title">Download mode</string>
    <string name="unica_pm_opt_download_summary">Enable Restart to Download mode in power menu</string>
    <string name="unica_pm_opt_restartui_title">Restart One UI</string>
    <string name="unica_pm_opt_restartui_summary">Enable Restart One UI (System UI) in power menu</string>
    <string name="unica_pm_opt_emergency_title">Emergency mode</string>
    <string name="unica_pm_opt_emergency_summary">Enable Emergency mode in power menu</string>
</resources>
