<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/unica_extra_settings_title" settings:hierarchicalParentFragment="io.mesalabs.unica.settings.UnicaSettingsFragment" settings:topLevelPreferenceKey="unica_extra_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:settings="http://schemas.android.com/apk/res-auto">
    <SecSwitchPreference android:title="@string/unica_allow_downgrade_title" android:key="unica_allow_downgrade" settings:controller="io.mesalabs.unica.settings.pm.AppDowngradePreferenceController" />
    <SecSwitchPreference android:title="@string/unica_allow_sdkbypass_title" android:key="unica_allow_sdkbypass" settings:controller="io.mesalabs.unica.settings.pm.AppTargetSDKBypassPreferenceController" />
    <SecSwitchPreference android:title="@string/unica_asks_title" android:key="unica_asks" settings:controller="io.mesalabs.unica.settings.pm.ASKSPreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <SecSwitchPreference android:title="@string/unica_secure_ss_title" android:key="unica_secure_ss" settings:controller="io.mesalabs.unica.settings.wm.SecureScreenshotPreferenceController" />
    <SecSwitchPreference android:title="@string/unica_ss_detection_title" android:key="unica_ss_detection" settings:controller="io.mesalabs.unica.settings.wm.CaptureDetectionPreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <SecSwitchPreference android:title="@string/unica_gphotos_title" android:key="unica_gphotos" settings:controller="io.mesalabs.unica.settings.extra.GooglePhotosPreferenceController" />
    <SecSwitchPreference android:title="@string/unica_games_spoof_title" android:key="unica_games_spoof" settings:controller="io.mesalabs.unica.settings.extra.GamesPropsPreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <SecSwitchPreference android:title="@string/unica_pm_title" android:key="unica_pm_enabled" android:summary="@string/unica_pm_summary" settings:controller="io.mesalabs.unica.settings.powermenu.PowerMenuEnabledPreferenceController" />
    <SecPreference android:title="@string/unica_pm_options_title" android:key="unica_pm_options" android:summary="@string/unica_pm_options_summary" android:fragment="io.mesalabs.unica.settings.powermenu.PowerMenuOptionsFragment" />
    <SecSwitchPreference android:title="@string/unica_pm_no_confirm_title" android:key="unica_pm_no_confirm" android:summary="@string/unica_pm_no_confirm_summary" settings:controller="io.mesalabs.unica.settings.powermenu.PowerMenuNoConfirmPreferenceController" />
    <SecSwitchPreference android:title="@string/unica_pm_no_lockscreen_title" android:key="unica_pm_no_lockscreen" android:summary="@string/unica_pm_no_lockscreen_summary" settings:controller="io.mesalabs.unica.settings.powermenu.PowerMenuNoLockscreenPreferenceController" />
    <SecSwitchPreference android:title="@string/unica_pm_unlock_first_title" android:key="unica_pm_unlock_first" android:summary="@string/unica_pm_unlock_first_summary" settings:controller="io.mesalabs.unica.settings.powermenu.PowerMenuUnlockFirstPreferenceController" />
</PreferenceScreen>
